style.css
:root {
    --bright-orange: hsl(31, 77%, 52%);
    --dark-cyan: hsl(184, 100%, 22%);
    --v-dark-cyan: hsl(179, 100%, 13%);
    --transparent-white: hsla(0, 0%, 100%, 0.75);
    --v-light-gray: hsl(0, 0%, 95%);
    --h-font-family: 'Big Shoulders Display', cursive;
    --p-font-family: 'Lexend Deca', sans-serif;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    margin: 2rem 1rem;
}

main {
    margin-bottom: 1rem;
}

section {
    padding: 2rem 2.75rem;   
    display: flex;
    flex-direction: column;
    gap: 1.5rem; 
}

section > img {
    width: 22.5%;
}

section > h1 {
    /* margin: 1.5rem 0; */

    color: var(--v-light-gray);
    font-family: var(--h-font-family);
    text-transform: uppercase;
    font-size: 2rem;
}

section > p {
    font-family: var(--p-font-family);
    font-size: 15px;
    font-weight: 400;
    color: var(--transparent-white);
    line-height: 1.5rem;

    /* margin: 1.5rem 0; */
}

section > .btn {
    /* margin-top: 1rem; */
    padding: 0.8rem 1.6rem;
    border-radius: 1.5rem;
    border: none;
    font-family: var(--p-font-family);
    font-weight: 400;
    background-color: var(--v-light-gray);
    max-width: 10rem;
}

.s-1 {
    background-color: var(--bright-orange);
    border-radius: 8px 8px 0 0;
}

.s-2 {
    background-color: var(--dark-cyan);
}

.s-3 {
    background-color: var(--v-dark-cyan);
    border-radius: 0 0 8px 8px;
}

section > .s-1-btn {
    color: var(--bright-orange)
}

section > .s-2-btn {
    color: var(--dark-cyan)
}

section > .s-3-btn {
    color: var(--v-dark-cyan)
}

@media screen and (min-width: 600px) {
    body {
        height: 90vh;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    main {
        display: flex;
        max-width: 50rem;
    }


    .s-1 {
        border-radius: 8px 0 0 8px;
    }
    .s-3 {
        border-radius: 0 8px 8px 0;
    }

    section {
        flex-direction: column;
        box-sizing: border-box;
    }
    

    .s-1-btn:hover,
    .s-1-btn:active,
    .s-1-btn:focus,
    .s-2-btn:hover,
    .s-2-btn:active,
    .s-2-btn:focus,
    .s-3-btn:hover,
    .s-3-btn:active,
    .s-3-btn:focus {
        background: none;
        border: 2px solid var(--transparent-white);
        color: var(--transparent-white);
        cursor: pointer;
        box-sizing: border-box;
    }
}

.attribution { 
    font-size: 11px; 
    text-align: center; 
    font-family: var(--p-font-family);
}
.attribution a {
    color: hsl(228, 45%, 44%); 
}

